# DiunDash

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  example.env
src/: main.rs
static/: index.html
